Sun Dec  2 19:26:47 2012  Masaya Tarui  <tarui@ruby-lang.org>

        * thread.c (RB_GC_SAVE_MACHINE_CONTEXT, rb_gc_save_machine_context): 
	  extract rb_gc_save_machine_context to RB_GC_SAVE_MACHINE_CONTEXT.
	  NOTE: machine_regs and machine_stack_end must be set in current scope.

Sun Dec  2 18:46:24 2012  Koichi Sasada  <ko1@atdot.net>

	* array.c, enum.c, insns.def, io.c, numeric.c, parse.y, process.c,
	  range.c: use prepared IDs.
	  A patch from charliesome (Charlie Somerville).
	  [Bug #7495]

	* common.mk: add dependency to id.h.

	* common.mk: replace ID_H_INCLUDES with id.h.

Sun Dec  2 16:48:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* lib/weakref.rb (rdoc): Clean up usage, add example,
	  note ArgumentError on WeakRef.new

Sun Dec  2 16:45:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* gc.c (WeakMap): Add doc for internal reference, use lib/weakref.rb

Sun Dec  2 07:24:23 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/parser.rb:  Parse files with a -*- rdoc -*- modeline
	* test/rdoc/test_rdoc_parser.rb:  Test for above

Sun Dec  2 06:02:00 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* gc.h (SET_MACHINE_STACK_END): add volatile for preventing
	  harmful optimization.  [ruby-dev:46665] [Bug #7468]

Sun Dec  2 05:01:58 2012  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (rb_iseq_line_trace_each): iterate `line' event only.

	* test/ruby/test_iseq.rb: add a test for this change.

Sun Dec  2 02:46:04 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: add TracePoint#inspect.

	* test/ruby/test_settracefunc.rb: add a test for this change.

Sat Dec  1 21:18:19 2012  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_backtrace.rb: add a test for
	  Thread::Backtrace::Location#inspect.
	  BTW, tests for `caller_locations' are not enough.
	  Any volunteers are welcome.

Sat Dec  1 21:06:58 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c (location_inspect_m): add
	  Thread::Backtrace::Location#inspect.